# pgduz

./: Cargo.toml  Dockerfile  README.md  entrypoint.sh
src/: encrypt.rs  main.rs  pg_dump.rs  zoho_workdrive_uploader.rs
