[package]
name = "pgduz"
version = "0.1.0"
edition = "2021"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attohttpc = { version = "0.22.0", default-features = false, features = ["compress", "json", "rustls"] }
clap = { version = "3.2.22", features = ["cargo", "env", "wrap_help"] }
serde_json = "1.0.85"

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.dev]
opt-level = 3
lto = true

[target.'cfg(not(target_os = "windows"))'.dependencies]
jemallocator = "0.5.0"