[package]
name = "pgduz"
description = "pg_dump with Zoho WorkDrive uploader"
version = "0.1.0"
edition = "2021"
authors = ["sycured <60801403+sycured@users.noreply.github.com>"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attohttpc = { version = "0.25.0", default-features = false, features = ["compress", "json", "rustls"] }
chrono = { version = "0.4.26", features = ["clock", "std"] }
clap = { version = "4.3.5", features = ["cargo", "env", "wrap_help"] }
serde_json = "1.0.99"

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.dev]
opt-level = 3
lto = true

[target.'cfg(not(target_os = "windows"))'.dependencies]
jemallocator = "0.5.0"